--- a/studentmanagment/Views/Students/Index.cshtml
+++ b/studentmanagment/Views/Students/Index.cshtml
@@ -18,10 +18,17 @@
         </div>
         <div class="card-body">
             <div class="d-flex justify-content-end mb-4">
-                <a asp-action="Create" class="btn btn-success">
+                <a asp-action="Create" class="btn btn-success me-2">
                     <i class="fas fa-plus-circle me-1"></i> Add New Student
                 </a>
+                <a asp-action="Deleted" class="btn btn-outline-danger">
+                    <i class="fas fa-trash me-1"></i> View Deleted
+                </a>
             </div>
+        </div>
+
+</div>
+
 
             @if (!Model.Any())
             {
@@ -114,7 +121,6 @@
                     <i class="fas fa-exclamation-triangle me-2"></i>
                     Are you sure you want to delete the student "<strong id="studentNameToDelete"></strong>"?
                 </div>
-                <p class="text-muted">This action cannot be undone, and all data associated with this student will be deleted.</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
