--- a/studentmanagment/Views/Shared/_Layout.cshtml
+++ b/studentmanagment/Views/Shared/_Layout.cshtml
@@ -65,11 +65,24 @@
 						<i class="hamburger align-self-center"></i>
 					</a>
 
-					<form asp-controller="Auth" asp-action="Logout" method="post" class="d-inline">
-						<button type="submit" class="btn btn-outline-danger">
-							<i class="fas fa-sign-out-alt"></i> خروج
-						</button>
-					</form>
+
+					@if (User.Identity.IsAuthenticated)
+					{
+						<div class="d-flex align-items-center">
+							<span class="me-3 text-primary fw-bold">
+								Welcome, @User.Identity.Name
+							</span>
+
+							<form asp-controller="Auth" asp-action="Logout" method="post" class="d-inline">
+								<button type="submit" class="btn btn-outline-danger">
+									<i class="fas fa-sign-out-alt"></i> Logout
+								</button>
+							</form>
+						</div>
+					}
+
+
+
 				</div>
 			</nav>
 			<main class="content">
